# Chess-Mastermind

./: CMakeLists.txt  README.md  game.chess  main.cpp  main.py  main.qml  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  qmlfuncs.cpp  qmlfuncs.h  test.qml  todo
analyzer/: Analyzer.pyproject  CMakeLists.txt  analyze.c  analyzer.qml  bridge.py  build.bat  cmake_install.cmake  display.py  game_review.c  game_review.py  main.cpp  main.py  main.qml  pieces.py  qmlfuncs.py  test.qml
analyzer/analyze_autogen/: deps  moc_predefs.h
engines/: stockfish-ubuntu-x86-64-avx2:Zone.Identifier
qml/: main.qml
src/: main.cpp
